--- a/comant-site/build.gradle
+++ b/comant-site/build.gradle
@@ -15,27 +15,31 @@ apply plugin: 'spring-boot'
 dependencies {
     compile project(':comant-client')
 
-    compile 'org.jetbrains.kotlin:kotlin-stdlib:1.0.1'
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.0.1'
 
     //Spring Boot
-    compile 'org.springframework.boot:spring-boot-starter-web'
-    compile 'org.springframework.boot:spring-boot-devtools'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.3.5.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '1.3.5.RELEASE'
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.3.5.RELEASE'
 
     //Various Spring components
-    compile 'org.springframework:spring-orm:4.2.6.RELEASE'
-    compile 'org.springframework:spring-tx:4.2.6.RELEASE'
+    compile group: 'org.springframework', name: 'spring-orm', version: '4.2.6.RELEASE'
+    compile group: 'org.springframework', name: 'spring-tx', version: '4.2.6.RELEASE'
 
     //Hibernate
-    compile 'org.hibernate:hibernate-core:5.1.0.Final'
-    compile 'org.postgresql:postgresql:9.4.1208.jre7'
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.1.0.Final'
+    compile group: 'org.hibernate', name: 'hibernate-java8', version: '5.1.0.Final'
+    compile group: 'org.postgresql', name: 'postgresql', version: '9.4.1208.jre7'
 
     //JWT
-    compile 'io.jsonwebtoken:jjwt:0.6.0'
+    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.6.0'
+
+    //Springfox (for Swagger documentation)
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.4.0'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.4.0'
 
     //jBCrypt (we don't use Spring Security, so we can't use its bcrypt implementation)
-    compile 'org.mindrot:jbcrypt:0.3m'
-
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile group: 'org.mindrot', name: 'jbcrypt', version: '0.3m'
 }
 
 springBoot {
