Started front-end, downgraded to Foundation 5, implemented login form.

--- a/comant-site/src/main/resources/application.properties
+++ b/comant-site/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+comant.sitename=My Own Code School
+
 comant.secret=EuNag3Am+CHuGTbsb9SIGRqNg31n1Tp6X6NCXYKRqoA=
 
 comant.db.driverClassName=org.postgresql.Driver
