--- a/comant-client/bower.json
+++ b/comant-client/bower.json
@@ -16,8 +16,12 @@
     "tests"
   ],
   "devDependencies": {
-    "foundation-sites": "^6.2.1",
-    "motion-ui": "^1.2.2",
-    "angular": "^1.5.5"
+    "foundation": "^5.5.3",
+    "angular": "^1.5.5",
+    "angular-route": "^1.5.5",
+    "angular-foundation": "^0.8.0",
+    "angular-local-storage": "^0.2.7",
+    "angular-toastr": "^1.7.0",
+    "angular-animate": "^1.5.5"
   }
 }
