--- a/comant-client/package.json
+++ b/comant-client/package.json
@@ -5,10 +5,12 @@
   "main": "gulpfile.js",
   "dependencies": {},
   "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
     "bower": "^1.7.9",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-sass": "^2.3.1",
     "rimraf": "^2.5.2",
     "yargs": "^4.7.0"
