--- a/comant-client/bower.json
+++ b/comant-client/bower.json
@@ -18,10 +18,11 @@
   "devDependencies": {
     "foundation": "^5.5.3",
     "angular": "^1.5.5",
-    "angular-route": "^1.5.5",
     "angular-foundation": "^0.8.0",
     "angular-local-storage": "^0.2.7",
     "angular-toastr": "^1.7.0",
-    "angular-animate": "^1.5.5"
+    "angular-animate": "^1.5.5",
+    "angular-ui-router": "^0.3.0",
+    "angular-resource": "^1.5.5"
   }
 }
