--- a/comant-site/build.gradle
+++ b/comant-site/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-orm', version: '4.2.6.RELEASE'
     compile group: 'org.springframework', name: 'spring-tx', version: '4.2.6.RELEASE'
 
+    //Jackson additional datatypes
+    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.7.4'
+
     //Hibernate
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.1.0.Final'
     compile group: 'org.hibernate', name: 'hibernate-java8', version: '5.1.0.Final'
