Backend refactor, added classes API.

--- a/comant-site/src/main/resources/application.properties
+++ b/comant-site/src/main/resources/application.properties
@@ -7,6 +7,8 @@ comant.db.url=jdbc:postgresql://localhost:5432/comant
 comant.db.username=postgres
 comant.db.password=password
 
+spring.jackson.serialization.write_dates_as_timestamps=false
+
 hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
 hibernate.show_sql=false
 hibernate.format_sql=false
