--- a/comant-client/bower.json
+++ b/comant-client/bower.json
@@ -23,6 +23,8 @@
     "angular-toastr": "^1.7.0",
     "angular-animate": "^1.5.5",
     "angular-ui-router": "^0.3.0",
-    "angular-resource": "^1.5.5"
+    "angular-resource": "^1.5.5",
+    "moment": "^2.13.0",
+    "font-awesome": "^4.6.3"
   }
 }
